Add actual html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,253 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
-        <title>My test page</title>
+        <title>Jez Salad</title>
     </head>
     <body>
-        … your code goes here
+        <main class="Main-page">
+            <header class="main-page-header">
+                <h3 class="logo">JEZ SALAD</h3>
+                <nav class="upper-nav">
+                    <a href="#" class="home-navigation"> Home </a>
+                    <a href="#" class="page-navigation"> Menu </a>
+                    <a href="#" class="page-navigation"> Contact </a>
+                    <a href="#" class="page-navigation"> About us </a>
+                </nav>
+                <button class="sign-in-button"> Sign in </button>
+            </header>
+            <article class="main-page-text">
+                <!-- Possibly a separate section for span-button -->
+                <span class="over-main-page-title"> #1 Best Healthy Salad</span>
+                <h1 class="main-page-title"> Skip The Diet Just Eat Healthy With Jez Salad</h1>
+                <p class="standard-text"> Imagine you dont need a diet because we provide healthy and delicious food for you!</p>
+                <button class="standard-button"> Order Food </button>
+                <section class="statistics">
+                    <!-- Might group them as "all numbers" and "all words", 
+                        since they have the same styles -->
+                    <span class="statistic">
+                        <h5 class="big-number"> 5.000+ </h5>
+                        <p class="description"> Customer </p>
+                    </span>
+                    <span class="statistic">
+                        <h5 class="big-number"> 8.000+ </h5>
+                        <p class="description"> Delivery </p>
+                    </span>
+                    <span class="statistic">
+                        <h5 class="big-number"> 1.000+ </h5>
+                        <p class="description"> Ratings </p>
+                    </span>
+                </section>
+            </article>
+            <article class="main-page-illustration">
+                <section class="main-page-images">
+                    <img class="heart-icon" src="./MainPage/heart.svg">
+                    <img class="woman-eating" src="./MainPage/Woman.png">
+                    <img class="woman-eating-dark-background" src="./MainPage/dark backgroud.svg">
+                    <img class="woman-eating-light-background" src="./MainPage/light background.svg">
+                    <img class="woman-eating-background-circles" src="./MainPage/cloud.svg">
+                    <img class="woman-eating-background-circles" src="./MainPage/cloud.svg">
+                    <!-- Too many classes? -->
+                </section>
+                <figure class="small-review">
+                    <img class="review-emoji" src="./MainPage/ya.svg">
+                    <figcaption class="in-figure-title"> Our Happy Customer</figcaption>
+                    <figure class="rating">
+                        <img class="star" src="./MainPage/Star.svg">
+                        <figcaption class="rate"> 4.9 </figcaption>
+                        <figcaption class="rate-info"> (1.989 Reviews) </figcaption>
+                    </figure>
+                </figure>
+                <figure class="calorie-statistic">
+                    <figcaption class="calorie-statistic-title">Daily Calories</figcaption>
+                    <figcaption class="calorie-statistic-number"> 123 Cal </figcaption>
+                    <progress class="calorie-intake" value="32"></progress>
+                    <progress class="calorie-intake" value="41"></progress>
+                    <progress class="calorie-intake" value="62"></progress>
+                    <progress class="calorie-intake" value="51"></progress>
+                    <progress class="calorie-intake" value="41"></progress>
+                    <progress class="calorie-intake" value="72"></progress>
+                    <progress class="calorie-intake" value="81"></progress>
+                    <progress class="calorie-intake" value="91"></progress>
+                </figure>
+            </article>
+        </main>
+        <main class="why-us">
+            <header class="why-us-headlines">
+                <h2 class="page-title"> WHY CHOOSE US FOR YOUR HEALTHY FOOD</h1>
+                <p class="standard-text">We continue to consistently choose 
+                    and maintain the quality of the fruit served, so that 
+                    it remains fresh and nutritious when you eat it.
+                </p>
+            </header>
+            <main class="why-us-cards">
+                <article class="why-us-card">
+                    <img class="why-us-card-icon" src="./WhyUs/City.svg">
+                    <h3 class="why-us-card-headline"> Own fruit orchard </h3>
+                    <p class="why-us-card-text"> 
+                        Langsung dari Kebun Sendiri yang 
+                        tersebar di setiap provinsi yang 
+                        memiliki cabang toko Jez Salad</p>
+                    <a href="#" class="why-us-card-link"> Learn more 
+                        <img class="why-us-card-arrow" src="./WhyUs/Arrow.png">
+                    </a>
+                </article>
+                <article class="why-us-card-highlighted"> <!-- join with anothe class if necessary -->
+                    <img class="why-us-card-icon" src="./WhyUs/No1.svg">
+                    <h3 class="why-us-card-headline"> #1 Healthy Fruit Salad</h3>
+                    <p class="why-us-card-text"> 
+                        The pioneer of healthy food salads that 
+                        are delicious & suitable for all people 
+                        with the best quality assurance</p>
+                    <button class="why-us-card-button"> Learn more 
+                        <img class="why-us-card-arrow" src="./WhyUs/Arrow.png">
+                    </button>
+                </article>
+                <article class="why-us-card">
+                    <img class="why-us-card-icon" src="./WhyUs/Cup.svg">
+                    <h3 class="why-us-card-headline"> 100 Top Brand </h3>
+                    <p class="why-us-card-text"> 
+                        We are one of the best brends in the  
+                        Food and Beverage sector
+                        in Indonesia</p>
+                    <a href="#" class="why-us-card-link"> Learn more 
+                        <img class="why-us-card-arrow" src="./WhyUs/Arrow.png">
+                    </a>
+                </article>
+            </main>
+        </main>
+        <main class="reviews">
+            <article class="reviews-headline"> <!-- Technically it might be a header, but it is not at the top !-->
+                <h2 class="reviwew-page-title"> What Are People Saying About Us </h1>
+                <p class="standard-text"> We are very heapy if you are satisfied with our
+                    service and products, let's read pure reviews from
+                    customers who bought our products.
+                </p>
+                <nav class="review-number">02/05</nav>
+                <figure>
+                    <img class="review-nav-arrow" src="./Reviews/Previous Button.svg">
+                    <img class="review-nav-arrow" src="./Reviews/Next Button.svg">
+                </figure>
+            </article>
+            <main class="review-cards">
+                <article class="review-card">
+                    <img class="reviewer" src="./Reviews/Pers1.png"> <!-- might need to put this in a separate block to make some changes later (rounded corners)-->
+                    <h3 class="review-card-headline"> Selena Gomz </h3> 
+                    <!-- it has the same font as why-us cards title, but may need some other styling -->
+                    <span class="review-card-yo"> 22 Years</span>
+                    <p class="review-card-text"> 
+                        The salad is fresh!!! Don't ask
+                        about the sauce again, it's 
+                        really delicious, it's going to 
+                        be a routine. I  recommend this 
+                        salad to all of you guys! 
+                        because they really take 
+                        care of the quality </p>
+                </article>
+                <article class="review-card">
+                    <img class="reviewer" src="./Reviews/Pers2png"> 
+                    <h3 class="review-card-headline"> David Ken </h3> 
+                    <span class="review-card-yo"> 24 Years</span>
+                    <p class="review-card-text"> 
+                        The salad is fresh!!! Don't ask
+                        about the sauce again, it's 
+                        really delicious, it's going to 
+                        be a routine. I  recommend this 
+                        salad to all of you guys! 
+                        because they really take 
+                        care of the quality </p>
+                </article>
+                <article class="review-card">
+                    <img class="reviewer" src="./Reviews/Pers3.png">
+                    <h3 class="review-card-headline"> Jennifer Sina </h3> 
+                    <span class="review-card-yo"> 21 Years</span>
+                    <p class="review-card-text"> 
+                        The salad is fresh!!! Don't ask
+                        about the sauce again, it's 
+                        really delicious, it's going to 
+                        be a routine. I  recommend this 
+                        salad to all of you guys! 
+                        because they really take 
+                        care of the quality </p>
+                </article>
+            </main>
+        </main>
+        <main class="menu">
+            <header class="menu-headline">
+                <span class="mini-headline"> MENU YANG MEMBUATMU JATUH CINTA </span>
+                <h2 class="page-title">ENJOY THE BEST MENU AND GET DISCOUNTS AVALIABLE</h1>
+            </header>
+            <main class="menu-cards"> <!-- similar why-us-cards (maybe make them the same class in the future) -->
+                <figure class="menu-card">
+                    <img class="menu-card-img" src="./Menu/dish1.png">
+                    <h6 class="menu-card-name"> Mini Salad Yummy </h6>
+                    <h4 class="menu-card-price"> $2.99 </h4>
+                </figure>
+                <figure class="menu-card">
+                    <img class="menu-card-img" src="./Menu/dish2.png">
+                    <h6 class="menu-card-name"> Completed Salad </h6>
+                    <h4 class="menu-card-price"> $3.99 </h4>
+                </figure>
+                <figure class="menu-card">
+                    <img class="menu-card-img" src="./Menu/dish3.png">
+                    <h6 class="menu-card-name"> Salad Yummy Red </h6>
+                    <h4 class="menu-card-price"> $3.99 </h4>
+                </figure>
+            </main>
+        </main>
+        <main class="subscription">
+            <figure class="subscription-form">
+                <img class="subscription-form-background" src="./Subscribe/Background.svg">
+                <section class="subscription-form-text">
+                    <span class="mini-headline"> Our Subscribe </span>
+                    <h2 class="page-title"> Subscribe To Get The Latest Promo from Jez Salad</h1>
+                        <p class="standard-text"> We recommended you to subscribe to our promo program,<br>
+                        drop your email below to get daily update about us</p>
+                </section>
+                <form class="subscription" action="#">
+                    <input type="email" name="email-for-subscription" placeholder="Enter your email address">
+                    <input type="submit" value="Subscribe">
+                </form>
+            </figure>
+        </main>
+        <footer class="website-footer">
+            <article class="footer-info">
+                <h3 class="logo"> JEZ SALAD </h3>
+                <p class="standard-text"> Jez Salad is the pioneer of 
+                    healthy fruit salad with 
+                    high nutrition.
+                </p>
+                <span class="copyright-sign"> ©Copyright Jez Salad</span>
+            </article>
+            <nav class="footer-article">
+                <h6 class="footer-headline"> Feature </h6>
+                <a href="#" class="standard-text"> Menu </a>
+                <a href="#" class="standard-text"> Promo </a>
+                <a href="#" class="standard-text"> Contact </a>
+                <a href="#" class="standard-text"> About us </a>
+            </nav>
+            <article class="footer-article">
+                <h6 class="footer-headline"> Get in Touch </h6>
+                <figure class="contact-info">
+                    <img class="contact-info-img" src="./Footer/location.svg">
+                    <figcaption class="standard-text">8819 Ohio St. South Gate, CA 90280</figcaption>
+                </figure>
+                <figure class="contact-info">
+                    <img class="contact-info-img" src="./Footer/email.svg">
+                    <figcaption class="standard-text">Ourstudio@hello.com</figcaption>
+                </figure>
+                <figure class="contact-info">
+                    <img class="contact-info-img" src="./Footer/phone.svg">
+                    <figcaption class="standard-text">+1 386-688-3295</figcaption>
+                </figure>
+            </article>
+            <article class="footer-article">
+                <figure class="socials">
+                    <img class="contact-info-img" src="./Footer/twitter.svg">
+                    <img class="contact-info-img" src="./Footer/linkedin.svg">
+                    <img class="contact-info-img" src="./Footer/instagram.svg">
+                    <figcaption class="standard-text"> Folow our social media </figcaption>
+                </figure>
+            </article>
+        </footer>
     </body>
 </html>
